syntax = "proto3";

package common;

option go_package = "github.com/ddr4869/minifab/proto/common";

import "google/protobuf/timestamp.proto";

// 상태 코드
enum StatusCode {
    OK = 0;
    INVALID_ARGUMENT = 1;
    NOT_FOUND = 2;
    ALREADY_EXISTS = 3;
    PERMISSION_DENIED = 4;
    INTERNAL_ERROR = 5;
    UNAVAILABLE = 6;
    TIMEOUT = 7;
    INVALID_SIGNATURE = 8;
    INVALID_CERTIFICATE = 9;
    CHANNEL_NOT_FOUND = 10;
    TRANSACTION_VALIDATION_FAILED = 11;
    ENDORSEMENT_POLICY_FAILURE = 12;
    NETWORK_ERROR = 13;
    CONSENSUS_ERROR = 14;
    LEDGER_ERROR = 15;
    MSP_ERROR = 16;
    BLOCK_VALIDATION_FAILED = 17;
    INVALID_BLOCK = 18;
    INVALID_TRANSACTION_FORMAT = 19;
}

// 메시지 타입
enum MessageType {
    MESSAGE_TYPE_UNSPECIFIED = 0;
    MESSAGE_TYPE_BLOCK = 1;           // 블록 전송
    MESSAGE_TYPE_TRANSACTION = 2;     // 트랜잭션 전송
    MESSAGE_TYPE_CONFIG = 3;          // 설정 전송
}

// 블록 타입 구분
enum BlockType {
    BLOCK_TYPE_UNSPECIFIED = 0;
    BLOCK_TYPE_CONFIG = 1;    // 설정 블록
    BLOCK_TYPE_DATA = 2;      // 일반 트랜잭션 블록
}

// Envelope - 노드 간 통신용 봉투
message Envelope {
    bytes payload = 1;        // 직렬화된 Payload
    bytes signature = 2;      // payload 서명
}

// Payload - 실제 데이터를 담는 구조
message Payload {
    Header header = 1;        // 메시지 헤더
    bytes data = 2;           // 직렬화된 데이터 (Block, Transaction 등)
}

// Header - 메시지 헤더
message Header {
    bytes nonce = 1;          // 중복 방지용 nonce
    Identity identity = 2;
    MessageType type = 3;     // 메시지 타입
    string channel_id = 4;    // 채널 ID
    google.protobuf.Timestamp timestamp = 5; // 타임스탬프
}


// Block - 완전한 블록 구조
message Block {
    BlockHeader header = 1;               // Block Header
    BlockData data = 2;                   // Block Data
    BlockMetadata metadata = 3;           // Block Metadata
}

// Block Header - 블록 헤더
message BlockHeader {
    uint64 number = 1;                    // Block Number (0부터 시작)
    bytes current_block_hash = 2;         // 현재 Block Hash
    bytes previous_hash = 3;              // 이전 Block Header Hash
    BlockType header_type = 4;            // 블록 타입 구분
}

// Block Data - Ordering service에 의해 정렬된 트랜잭션들
message BlockData {
    repeated bytes transactions = 1;      // 트랜잭션 데이터 목록
}

// Block Metadata - 블록 검증을 위한 메타데이터
message BlockMetadata {
    bytes signature = 1;                  // 서명 - orderer
    bytes validation_bitmap = 2;          // 트랜잭션 Valid/Invalid 비트맵
    bytes accumulated_hash = 3;           // fork 확인을 위한 축적된 해시값
    Identity identity = 4;
}

// Transaction - 트랜잭션 구조
message Transaction {
    string tx_id = 1;                        // 트랜잭션 ID
    bytes payload = 2;                    // 트랜잭션 데이터
    bytes signature = 3;                  // 서명 - endorser
    Identity identity = 4;
    int64 timestamp = 5;                  // 트랜잭션 생성 시간
} 

message Identity {
    bytes creator = 1;
    string msp_id = 2;
}

