syntax = "proto3";

package peer;

option go_package = "github.com/ddr4869/minifab/proto/peer";

import "proto/common/common.proto";

// PeerService - Peer 노드 서비스
service PeerService {
    // 블록 처리
    rpc ProcessBlock(common.Envelope) returns (ProcessBlockResponse) {}
    
    // 채널 참여
    rpc JoinChannel(JoinChannelRequest) returns (JoinChannelResponse) {}

}

// ProcessBlockResponse - 블록 처리 응답
message ProcessBlockResponse {
    common.StatusCode status = 1;
    string message = 2;
    uint64 block_number = 3;
    int32 valid_transactions = 4;
    int32 invalid_transactions = 5;
}

// JoinChannelRequest - 채널 참여 요청
message JoinChannelRequest {
    string channel_id = 1;
    common.Block genesis_block = 2;
    string peer_id = 3;
    bytes peer_identity = 4;
}

// JoinChannelResponse - 채널 참여 응답
message JoinChannelResponse {
    common.StatusCode status = 1;
    string message = 2;
    string channel_id = 3;
    uint64 current_height = 4;
}
